tests/types/errors/option_join_outer_unguarded.err
1. error[T058]: dereference of optional `c` requires a none guard
  --> tests/types/errors/option_join_outer_unguarded.mochi:12:21

 12 |              select c.name
    |                     ^

help:
  Narrow with `if c != none { ... }` first, or supply a fallback (`?? default`).
